# Ton-programming-language

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Ton.g4  TonDeclarationListener.cpp  TonDeclarationListener.h  TonInterpreter.cpp  TonInterpreter.h  install-linux.sh  install-windows.bat  main.cpp
antlr4_generated/: Ton.interp  Ton.tokens  TonBaseListener.cpp  TonBaseListener.h  TonBaseVisitor.cpp  TonBaseVisitor.h  TonLexer.cpp  TonLexer.h  TonLexer.interp  TonLexer.tokens  TonListener.cpp  TonListener.h  TonParser.cpp  TonParser.h  TonVisitor.cpp  TonVisitor.h
docs/: audio.md  brainstorm.md  credits.md  diagnostics.md  doc.md  raport.md  setup.md  syntax.md
examples/: errorexample_math1.txt  errorexample_math2.txt  example2.txt  example3.txt  example5.txt  example_functions.txt  example_loops.txt  example_recur.ton  example_shout.txt  funcdecl.ton
examples/Music_examples/: example4.txt  example6.txt  example7.txt  example_vol.ton  harder.ton  herecomesthesun.ton  playground.ton  simplest.ton  sound_op.ton  synths.ton  synths_example.ton
examples/adv_error_handling_examples/: example_line_error.txt
examples/diagnostic_examples/: example_all_tests.ton  example_typos.ton  example_uninitialized.ton
examples/error_examples/: error_break1.txt  error_continue.txt  errorexample_elder.txt
examples/example_others/: example_array_typecheck.ton  example_conversions.ton  example_correctloop.ton  example_if_otherwise  example_length.ton  example_new_loop.txt  example_parent.ton  example_scope_fix1.ton  example_scope_fix2.ton  example_scope_fix3.ton  (+1 more)
src/: main.cpp
(+39 files in other folders)
